stderr
JudgeMan.java:60: error: illegal start of expression
    private static int pairJudge(String[] hand){
    ^
1 error
